--- a/archives/zhihu-search/2024-02-21.md
+++ b/archives/zhihu-search/2024-02-21.md
@@ -1,19 +1,22 @@
 # 2024-02-21
 
-共 12 条
+共 15 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Wed Feb 21 2024 14:07:13 GMT+0800 (China Standard Time) -->
-1. [今日股市行情](https://www.zhihu.com/search?q=今日股市行情)
+<!-- 最后更新时间 Wed Feb 21 2024 15:00:39 GMT+0800 (China Standard Time) -->
+1. [系统集成项目管理工程师](https://www.zhihu.com/search?q=系统集成项目管理工程师)
+1. [今日A股市场](https://www.zhihu.com/search?q=今日A股市场)
 1. [软件工程](https://www.zhihu.com/search?q=软件工程)
 1. [三大指数低开](https://www.zhihu.com/search?q=三大指数低开)
+1. [新疆地震](https://www.zhihu.com/search?q=新疆地震)
+1. [媒体谈韩国医生辞职潮](https://www.zhihu.com/search?q=媒体谈韩国医生辞职潮)
 1. [计算机一级证要考吗](https://www.zhihu.com/search?q=计算机一级证要考吗)
 1. [计算机二级哪个比较好考](https://www.zhihu.com/search?q=计算机二级哪个比较好考)
 1. [项目管理](https://www.zhihu.com/search?q=项目管理)
 1. [信息系统项目管理师](https://www.zhihu.com/search?q=信息系统项目管理师)
+1. [今日股市行情](https://www.zhihu.com/search?q=今日股市行情)
 1. [网络工程师](https://www.zhihu.com/search?q=网络工程师)
 1. [软考高项](https://www.zhihu.com/search?q=软考高项)
 1. [软件工程师](https://www.zhihu.com/search?q=软件工程师)
 1. [金奥博回购公司股份](https://www.zhihu.com/search?q=金奥博回购公司股份)
-1. [今日A股市场](https://www.zhihu.com/search?q=今日A股市场)
 <!-- END ZHIHUSEARCH -->
