--- a/archives/toutiao-search/2024-02-21.md
+++ b/archives/toutiao-search/2024-02-21.md
@@ -1,62 +1,78 @@
 # 2024-02-21
 
-共 233 条
+共 246 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Feb 21 2024 14:07:13 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Feb 21 2024 15:00:39 GMT+0800 (China Standard Time) -->
 1. [台军方称不会介入大陆海警临检台船](https://so.toutiao.com/search?keyword=台军方称不会介入大陆海警临检台船)
 1. [网传父亲出轨儿子女友 派出所回应](https://so.toutiao.com/search?keyword=网传父亲出轨儿子女友+派出所回应)
 1. [数字赋能保障春节出行安全顺畅](https://so.toutiao.com/search?keyword=数字赋能保障春节出行安全顺畅)
 1. [山东泰山晋级亚冠8强](https://so.toutiao.com/search?keyword=山东泰山晋级亚冠8强)
-1. [男子抱娃抢龙须被护龙队围殴](https://so.toutiao.com/search?keyword=男子抱娃抢龙须被护龙队围殴)
-1. [齐齐哈尔体育馆坍塌11死事故追责51人](https://so.toutiao.com/search?keyword=齐齐哈尔体育馆坍塌11死事故追责51人)
-1. [网友喜提7.98万比亚迪秦荣耀](https://so.toutiao.com/search?keyword=网友喜提7.98万比亚迪秦荣耀)
-1. [郑州下雪速度赶不上扫雪车清理速度](https://so.toutiao.com/search?keyword=郑州下雪速度赶不上扫雪车清理速度)
-1. [官方辟谣13岁母亲厕所产弃婴](https://so.toutiao.com/search?keyword=官方辟谣13岁母亲厕所产弃婴)
 1. [国家早已明确禁止师生恋](https://so.toutiao.com/search?keyword=国家早已明确禁止师生恋)
-1. [什么是“霰”](https://so.toutiao.com/search?keyword=什么是“霰”)
+1. [齐齐哈尔体育馆坍塌11死事故追责51人](https://so.toutiao.com/search?keyword=齐齐哈尔体育馆坍塌11死事故追责51人)
 1. [宝爸得知新生儿是女孩欢呼雀跃](https://so.toutiao.com/search?keyword=宝爸得知新生儿是女孩欢呼雀跃)
-1. [春节后鸡蛋价格大跳水](https://so.toutiao.com/search?keyword=春节后鸡蛋价格大跳水)
-1. [气象预报又“全黑”了](https://so.toutiao.com/search?keyword=气象预报又“全黑”了)
-1. [秦PLUS DM-i官降2万元](https://so.toutiao.com/search?keyword=秦PLUS+DM-i官降2万元)
+1. [贵州网红猴子狂奔到山下阿姨家吃饭](https://so.toutiao.com/search?keyword=贵州网红猴子狂奔到山下阿姨家吃饭)
+1. [官方辟谣13岁母亲厕所产弃婴](https://so.toutiao.com/search?keyword=官方辟谣13岁母亲厕所产弃婴)
+1. [郑州下雪速度赶不上扫雪车清理速度](https://so.toutiao.com/search?keyword=郑州下雪速度赶不上扫雪车清理速度)
+1. [江苏宿迁一医院门诊大厅发生垮塌](https://so.toutiao.com/search?keyword=江苏宿迁一医院门诊大厅发生垮塌)
+1. [男子抱娃抢龙须被护龙队围殴](https://so.toutiao.com/search?keyword=男子抱娃抢龙须被护龙队围殴)
+1. [春节让大众重新思考新能源汽车了吗](https://so.toutiao.com/search?keyword=春节让大众重新思考新能源汽车了吗)
+1. [什么是“霰”](https://so.toutiao.com/search?keyword=什么是“霰”)
+1. [河北沧州下雪如倒雪 车辆直打滑](https://so.toutiao.com/search?keyword=河北沧州下雪如倒雪+车辆直打滑)
+1. [金门：双方船只碰撞致大陆渔船翻覆](https://so.toutiao.com/search?keyword=金门：双方船只碰撞致大陆渔船翻覆)
+1. [情侣捡14万定制项链又丢弃赔4.5万](https://so.toutiao.com/search?keyword=情侣捡14万定制项链又丢弃赔4.5万)
+1. [网友喜提7.98万比亚迪秦荣耀](https://so.toutiao.com/search?keyword=网友喜提7.98万比亚迪秦荣耀)
+1. [醉酒女子下车窜向路中间被车撞](https://so.toutiao.com/search?keyword=醉酒女子下车窜向路中间被车撞)
+1. [张颂文《猎冰》今晚开播](https://so.toutiao.com/search?keyword=张颂文《猎冰》今晚开播)
+1. [甘肃瓜州暖心服务过境高速滞留群众](https://so.toutiao.com/search?keyword=甘肃瓜州暖心服务过境高速滞留群众)
 1. [史上最大力度降息意味什么](https://so.toutiao.com/search?keyword=史上最大力度降息意味什么)
+1. [气象预报又“全黑”了](https://so.toutiao.com/search?keyword=气象预报又“全黑”了)
+1. [贾玲：以前210斤动一动都觉得好累](https://so.toutiao.com/search?keyword=贾玲：以前210斤动一动都觉得好累)
+1. [被传疑感染艾滋 男星许凯报警](https://so.toutiao.com/search?keyword=被传疑感染艾滋+男星许凯报警)
+1. [专家呼吁实际利率应降到2%左右](https://so.toutiao.com/search?keyword=专家呼吁实际利率应降到2%左右)
+1. [贾玲说现在的训练量是“清粥小菜”](https://so.toutiao.com/search?keyword=贾玲说现在的训练量是“清粥小菜”)
+1. [福建游神穿80斤装扮通宵走22个村](https://so.toutiao.com/search?keyword=福建游神穿80斤装扮通宵走22个村)
+1. [秦PLUS DM-i官降2万元](https://so.toutiao.com/search?keyword=秦PLUS+DM-i官降2万元)
+1. [猎冰张颂文一镜封神](https://so.toutiao.com/search?keyword=猎冰张颂文一镜封神)
+1. [关小平夫妇公开道歉：从此不再回应](https://so.toutiao.com/search?keyword=关小平夫妇公开道歉：从此不再回应)
+1. [莫斯科至圣彼得堡高铁方案敲定](https://so.toutiao.com/search?keyword=莫斯科至圣彼得堡高铁方案敲定)
+1. [房贷利率快降到3%了要不要买房](https://so.toutiao.com/search?keyword=房贷利率快降到3%了要不要买房)
+1. [中国籍高中生日本溺亡 5名嫌犯被捕](https://so.toutiao.com/search?keyword=中国籍高中生日本溺亡+5名嫌犯被捕)
+1. [养老金涨后工龄15年和30年有何差别](https://so.toutiao.com/search?keyword=养老金涨后工龄15年和30年有何差别)
+1. [央视网评“秦朗巴黎丢作业”事件](https://so.toutiao.com/search?keyword=央视网评“秦朗巴黎丢作业”事件)
+1. [贾玲还是原来的贾玲](https://so.toutiao.com/search?keyword=贾玲还是原来的贾玲)
+1. [中国女游客泰国搭车险遭司机强暴](https://so.toutiao.com/search?keyword=中国女游客泰国搭车险遭司机强暴)
+1. [媒体五问“寒假作业丢巴黎”事件](https://so.toutiao.com/search?keyword=媒体五问“寒假作业丢巴黎”事件)
+1. [什么是寒假作业的“中国速度”](https://so.toutiao.com/search?keyword=什么是寒假作业的“中国速度”)
+1. [媒体：泰山队今天晚上抵达济南](https://so.toutiao.com/search?keyword=媒体：泰山队今天晚上抵达济南)
+1. [23岁女孩患肝癌 曾患乙肝未重视](https://so.toutiao.com/search?keyword=23岁女孩患肝癌+曾患乙肝未重视)
+1. [在青岛很少下这么大的雪](https://so.toutiao.com/search?keyword=在青岛很少下这么大的雪)
+1. [古天乐在郑中基演唱会疑似内涵梅西](https://so.toutiao.com/search?keyword=古天乐在郑中基演唱会疑似内涵梅西)
+1. [兰世立称在看守所也在跟年轻人聊天](https://so.toutiao.com/search?keyword=兰世立称在看守所也在跟年轻人聊天)
+1. [男子疑借帮女童爬滑梯趁机猥亵](https://so.toutiao.com/search?keyword=男子疑借帮女童爬滑梯趁机猥亵)
+1. [网友：高合开了个很不好的头](https://so.toutiao.com/search?keyword=网友：高合开了个很不好的头)
+1. [印度网友羡慕中国卖7.98万比亚迪秦](https://so.toutiao.com/search?keyword=印度网友羡慕中国卖7.98万比亚迪秦)
+1. [河南河北山西多地下“霰”](https://so.toutiao.com/search?keyword=河南河北山西多地下“霰”)
+1. [小朋友喂企鹅时突然跳水](https://so.toutiao.com/search?keyword=小朋友喂企鹅时突然跳水)
+1. [春节后鸡蛋价格大跳水](https://so.toutiao.com/search?keyword=春节后鸡蛋价格大跳水)
 1. [萌娃用压岁钱给妈妈买项链](https://so.toutiao.com/search?keyword=萌娃用压岁钱给妈妈买项链)
 1. [探店实拍：7.98万比亚迪秦亏着卖吗](https://so.toutiao.com/search?keyword=探店实拍：7.98万比亚迪秦亏着卖吗)
-1. [福建游神穿80斤装扮通宵走22个村](https://so.toutiao.com/search?keyword=福建游神穿80斤装扮通宵走22个村)
-1. [央视网评“秦朗巴黎丢作业”事件](https://so.toutiao.com/search?keyword=央视网评“秦朗巴黎丢作业”事件)
 1. [节后浙江疾控艾滋病咨询增两三倍](https://so.toutiao.com/search?keyword=节后浙江疾控艾滋病咨询增两三倍)
-1. [莫斯科至圣彼得堡高铁方案敲定](https://so.toutiao.com/search?keyword=莫斯科至圣彼得堡高铁方案敲定)
-1. [媒体五问“寒假作业丢巴黎”事件](https://so.toutiao.com/search?keyword=媒体五问“寒假作业丢巴黎”事件)
-1. [江苏宿迁一医院门诊大厅发生垮塌](https://so.toutiao.com/search?keyword=江苏宿迁一医院门诊大厅发生垮塌)
-1. [中国女游客泰国搭车险遭司机强暴](https://so.toutiao.com/search?keyword=中国女游客泰国搭车险遭司机强暴)
-1. [养老金涨后工龄15年和30年有何差别](https://so.toutiao.com/search?keyword=养老金涨后工龄15年和30年有何差别)
-1. [印度网友羡慕中国卖7.98万比亚迪秦](https://so.toutiao.com/search?keyword=印度网友羡慕中国卖7.98万比亚迪秦)
 1. [柳鑫宇否认私生活混乱](https://so.toutiao.com/search?keyword=柳鑫宇否认私生活混乱)
-1. [贾玲还是原来的贾玲](https://so.toutiao.com/search?keyword=贾玲还是原来的贾玲)
 1. [一群鸟撞击玻璃后摔落而亡](https://so.toutiao.com/search?keyword=一群鸟撞击玻璃后摔落而亡)
 1. [美国对巴以冲突政策出现大转弯了吗](https://so.toutiao.com/search?keyword=美国对巴以冲突政策出现大转弯了吗)
-1. [猎冰张颂文一镜封神](https://so.toutiao.com/search?keyword=猎冰张颂文一镜封神)
 1. [青岛大雪后网友拍下市民上班状态](https://so.toutiao.com/search?keyword=青岛大雪后网友拍下市民上班状态)
 1. [山东泰山队胜利引日媒反思](https://so.toutiao.com/search?keyword=山东泰山队胜利引日媒反思)
-1. [什么是寒假作业的“中国速度”](https://so.toutiao.com/search?keyword=什么是寒假作业的“中国速度”)
-1. [房贷利率快降到3%了要不要买房](https://so.toutiao.com/search?keyword=房贷利率快降到3%了要不要买房)
-1. [被传疑感染艾滋 男星许凯报警](https://so.toutiao.com/search?keyword=被传疑感染艾滋+男星许凯报警)
-1. [中国籍高中生日本溺亡 5名嫌犯被捕](https://so.toutiao.com/search?keyword=中国籍高中生日本溺亡+5名嫌犯被捕)
 1. [地球地核若完全冷却人类会经历什么](https://so.toutiao.com/search?keyword=地球地核若完全冷却人类会经历什么)
 1. [媒体：女星家被偷空暴露“美国病”](https://so.toutiao.com/search?keyword=媒体：女星家被偷空暴露“美国病”)
 1. [航班延误男子花两千打车回上海上班](https://so.toutiao.com/search?keyword=航班延误男子花两千打车回上海上班)
-1. [小朋友喂企鹅时突然跳水](https://so.toutiao.com/search?keyword=小朋友喂企鹅时突然跳水)
-1. [23岁女孩患肝癌 曾患乙肝未重视](https://so.toutiao.com/search?keyword=23岁女孩患肝癌+曾患乙肝未重视)
 1. [绍伊古向普京报告阿夫杰耶夫卡战况](https://so.toutiao.com/search?keyword=绍伊古向普京报告阿夫杰耶夫卡战况)
 1. [百亿级私募巨头宁波灵均道歉](https://so.toutiao.com/search?keyword=百亿级私募巨头宁波灵均道歉)
 1. [哈佛女生小学时想去剑桥被老师取笑](https://so.toutiao.com/search?keyword=哈佛女生小学时想去剑桥被老师取笑)
 1. [专家：现在不买房五年又白忙](https://so.toutiao.com/search?keyword=专家：现在不买房五年又白忙)
-1. [专家呼吁实际利率应降到2%左右](https://so.toutiao.com/search?keyword=专家呼吁实际利率应降到2%左右)
-1. [张颂文《猎冰》今晚开播](https://so.toutiao.com/search?keyword=张颂文《猎冰》今晚开播)
 1. [专家解读胡塞武装“连击”美英目标](https://so.toutiao.com/search?keyword=专家解读胡塞武装“连击”美英目标)
 1. [午评：沪指涨1.72%剑指3000点](https://so.toutiao.com/search?keyword=午评：沪指涨1.72%剑指3000点)
 1. [买到烂尾楼后可以停贷吗](https://so.toutiao.com/search?keyword=买到烂尾楼后可以停贷吗)
-1. [男子疑借帮女童爬滑梯趁机猥亵](https://so.toutiao.com/search?keyword=男子疑借帮女童爬滑梯趁机猥亵)
 1. [主人发烧去山里打针 狗狗一路寻找](https://so.toutiao.com/search?keyword=主人发烧去山里打针+狗狗一路寻找)
 1. [哺乳期妈妈看着奶茶馋哭了](https://so.toutiao.com/search?keyword=哺乳期妈妈看着奶茶馋哭了)
 1. [多部门已介入核查柳鑫宇自曝事件](https://so.toutiao.com/search?keyword=多部门已介入核查柳鑫宇自曝事件)
@@ -68,8 +84,6 @@
 1. [上海夜迎暴雨雷电冰雹](https://so.toutiao.com/search?keyword=上海夜迎暴雨雷电冰雹)
 1. [脑梗小伙被好友照顾80多天后站起](https://so.toutiao.com/search?keyword=脑梗小伙被好友照顾80多天后站起)
 1. [孩子大厅玩雪致邻居滑倒电脑损坏](https://so.toutiao.com/search?keyword=孩子大厅玩雪致邻居滑倒电脑损坏)
-1. [情侣捡14万定制项链又丢弃赔4.5万](https://so.toutiao.com/search?keyword=情侣捡14万定制项链又丢弃赔4.5万)
-1. [网友：高合开了个很不好的头](https://so.toutiao.com/search?keyword=网友：高合开了个很不好的头)
 1. [胡塞取得开战以来最大战果](https://so.toutiao.com/search?keyword=胡塞取得开战以来最大战果)
 1. [男子冒雪骑车回家衣服成冰壳](https://so.toutiao.com/search?keyword=男子冒雪骑车回家衣服成冰壳)
 1. [媒体：台当局应全面交代渔船事件](https://so.toutiao.com/search?keyword=媒体：台当局应全面交代渔船事件)
@@ -107,7 +121,6 @@
 1. [英超：曼城1-0布伦特福德](https://so.toutiao.com/search?keyword=英超：曼城1-0布伦特福德)
 1. [胖东来尝面女员工说自己给部门抹黑](https://so.toutiao.com/search?keyword=胖东来尝面女员工说自己给部门抹黑)
 1. [山西晋城冻雨致多车连撞](https://so.toutiao.com/search?keyword=山西晋城冻雨致多车连撞)
-1. [在青岛很少下这么大的雪](https://so.toutiao.com/search?keyword=在青岛很少下这么大的雪)
 1. [冻雨会给交通带来哪些影响](https://so.toutiao.com/search?keyword=冻雨会给交通带来哪些影响)
 1. [点燃新年消费“第一把火”](https://so.toutiao.com/search?keyword=点燃新年消费“第一把火”)
 1. [网红cos神明赵世子引众怒](https://so.toutiao.com/search?keyword=网红cos神明赵世子引众怒)
